fix scrollbar song list

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -56,8 +56,37 @@ html {
 }
 
 ::-webkit-scrollbar {
-    width: 0;
+    width: 5px;
 }
+
+.display-scroll:hover::-webkit-scrollbar-thumb {
+    background-color: var(--primary-color);
+}
+  
+::-webkit-scrollbar-thumb {
+    /* background-color: var(--primary-color); */
+
+    background-color: transparent;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-button {
+    display: none;
+}
+
+.hide-scroll::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+
+/* 
+::-webkit-scrollbar {
+    width: 0px;
+} */
 
 /* đổi màu chữ palceholder */
 
